--- a/responsive/index.html
+++ b/responsive/index.html
@@ -49,8 +49,17 @@
     <main>
 
         <section id="slider">
-            <div class="slider-area">
-                <!-- <img src="./assents/img/SHOWKES - Personal Portfolio HTML5 Template Preview - ThemeForest_files/intro-bg.jpg" alt=""> -->
+            <div class="slider-area">              
+              <div>
+                <p>Freelance</p>
+              </div>
+              <h1>Creative Web Developer</h1>
+              <div>
+                <a href="#">
+                  See My Work
+                </a>
+              </div>
+               
             </div>
            
         </section>
